--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,11 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" href="/favicon.ico" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" /> <!-- Si el navegador soporta SVG usará favicon.svg -->
+		<link rel="icon" href="/favicon.ico" /> <!-- Si el navegador no soporta SVG usará usará favicon.ico -->
+		<title>Jhon Mendoza</title>
 	</head>
 	<body>
 		<slot />
@@ -14,10 +13,4 @@
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
 </style>
