--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,14 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import Hero from '../components/Hero.astro';
+import Navbar from '../components/Navbar.astro';
+import About from '../components/About.astro';
 import Layout from '../layouts/Layout.astro';
-import "../styles/global.css";
 ---
 
 <Layout>
-	<Welcome />
+	<Navbar />
+	<main id="inicio">
+		<Hero />
+		<About />
+	</main>
 </Layout>
