--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,12 @@
 ---
-import Hero from '../components/Hero.astro';
-import Navbar from '../components/Navbar.astro';
-import About from '../components/About.astro';
 import Layout from '../layouts/Layout.astro';
+import Navbar from '../components/Navbar.astro';
+import Hero from '../components/Hero.astro';
+import About from '../components/About.astro';
+import Experience from '../components/Experience.astro';
+import Education from '../components/Education.astro';
+import Contact from '../components/Contact.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout>
@@ -10,5 +14,9 @@ import Layout from '../layouts/Layout.astro';
 	<main id="inicio">
 		<Hero />
 		<About />
+		<Experience />
+		<Education />
+		<Contact />
 	</main>
+	<Footer />
 </Layout>
