--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,7 +54,9 @@
 		/* Gradientes */
 		--gradient-1: linear-gradient(135deg, #3B82F6 0%, #8B5CF6 100%);
 		--gradient-2: linear-gradient(135deg, #14B8A6 0%, #3B82F6 100%);
-		--gradient-3: linear-gradient(135deg, #F97316 0%, #EC4899 100%);
+		--gradient-3: linear-gradient(135deg, #6366F1 0%, #06B6D4 100%);
+		--gradient-4: linear-gradient(135deg, #8B5CF6 0%, #06B6D4 100%);
+
 
 		/* Espaciado */
 		--space-4: 1rem;
