feat: corregir errores tipográficos en el pie de página y ajustar animaciones en la sección de héroe

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@
 				<h4 class="column-title">Navegación</h4>
 				<nav class="footer-nav">
 					<a href="#inicio" class="footer-link">Inicio</a>
-					<a href="#sobre-mi" class="footer-link">Sobre Mí</a>
+					<a href="#sobre-mi" class="footer-link">Sobre mí</a>
 					<a href="#experiencia" class="footer-link">Experiencia</a>
 					<a href="#educacion" class="footer-link">Educación</a>
 					<a href="#contacto" class="footer-link">Contacto</a>
@@ -31,7 +31,6 @@
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" class="heart-icon">
 							<path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/>
 						</svg>
-						usando Astro
 					</span>
 				</div>
 			</div>
